# OnePlace

./: .gitignore  CHANGELOG.md  README.md  index.html  package-lock.json  package.json  run-tauri-dev.cmd  vite.config.ts
.github/workflows/: release.yml
docs/: onenote-parity-checklist.md
scripts/: build-signed-release.mjs  publish-updater-release.mjs
src/: App.css  App.tsx  index.css  types.d.ts
src-tauri/: Cargo.toml  tauri.conf.json  windows-installer-hooks.nsh
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/app/: appConfig.ts  appConstants.ts  appFormatting.ts  appModel.ts  appPages.ts  appTypes.ts
src/components/: Icons.tsx
src/components/app/: AppShell.tsx  ContextMenuOverlay.tsx  DragBadge.tsx  FileInputs.tsx  NotePane.tsx  NotebooksPane.tsx  PagesPane.tsx  RibbonBar.tsx  SidePanes.tsx  TitleBar.tsx
src/features/app/: copilot.ts  useAppPersistence.ts  useClipboardActions.ts  useContextMenu.ts  useDragState.ts  useEditorActions.ts  useEditorChrome.ts  useFileActions.ts  useGlobalShortcuts.ts  useMediaAndDrawing.ts  useNavigationActions.ts  useNavigationHistory.ts  useNotebookPageActions.ts  useOneNoteExportImport.ts  useOneNoteImport.ts  usePageAssistActions.ts  usePageMutationHelpers.ts  useReviewHistory.ts  useSectionTaskActions.ts  useWorkspaceSearch.tsx  useWorkspaceTreeActions.ts
src/lib/: desktop.ts
src/styles/: app-chrome.css  app-overrides.css  app-pages.css  app-shell.css  app-sidebar.css  app-workspace.css
